[project]
name = "llama-viz"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "llama-index-core (>=0.11.0,<1)",
    "dash (>=2.18.2,<3.0.0)",
    "dash-bootstrap-components (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
